# legalai-yargi-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE.md  README.md  asgi_app.py  docker-compose.yml  legalai.env.example  mcp_server_main.py  pyproject.toml
.codex/: config.toml
.cursor/: mcp.json
.cursor/rules/: legalai.mdc
.github/workflows/: portable-release.yml
btk_mcp_module/: __init__.py  client.py  models.py
docs/: mcp-client-matrix.md  mcp-client-setup.md  socratlegal-setup.md  socratlegal-user-install.md  week11-demo.md
docs/superpowers/plans/: 2026-07-16-hafta10-tenant-izolasyonu-usage.md  2026-07-16-hafta9-agresif-karsi-taraf.md  2026-07-17-week11-kesif-demo.md  2026-07-18-week13-client-matrix.md  2026-07-18-week14-personas-and-sources.md  2026-07-19-socratlegal-unified-corpus.md  2026-07-20-socratlegal-contract-review-and-updates.md  2026-07-20-socratlegal-portable-manual-setup.md  2026-07-21-onbilgi-capraz-yargi-dilekce-quality.md  2026-07-21-ticaret-savunmasi.md  2026-07-22-v025-release-version-installer-matrix.md  2026-07-23-portable-one-click-update.md
docs/superpowers/specs/: 2026-07-16-hafta9-agresif-karsi-taraf-design.md  2026-07-17-week11-kesif-demo-design.md  2026-07-18-socratlegal-unified-corpus-design.md  2026-07-18-week13-client-matrix-design.md  2026-07-18-week14-personas-and-sources-design.md  2026-07-20-contract-review-and-reasoning-design.md  2026-07-20-socratlegal-portable-and-manual-setup-design.md  2026-07-21-onbilgi-capraz-yargi-dilekce-quality-design.md  2026-07-21-ticaret-savunmasi-design.md  2026-07-22-release-version-installer-matrix-design.md  2026-07-23-portable-one-click-update-design.md
legalai/: README.md  __init__.py
legalai/apps/api/: __init__.py  app.py  routes.py
legalai/apps/cli/: __init__.py  main.py
legalai/apps/mcp/: __init__.py  server.py
legalai/configs/jurisdictions/: aym.yaml  ceza.yaml  diger.yaml  hukuk.yaml  idare.yaml  kik.yaml  kvkk.yaml  rekabet.yaml  reklam_kurulu.yaml  ticaret_savunmasi.yaml  vergi.yaml
legalai/configs/sources/: competition.yaml  doctrine.yaml  institutions.yaml  official_competition.yaml  reports.yaml  trade_defense.yaml
legalai/tests/: test_release_version.py  test_version_contract.py
legalai/tests/aihm/: test_aym_bridge.py  test_cache.py  test_parser.py  test_rate_limiter.py  test_service.py
legalai/tests/api/: test_opposing_routes.py  test_routes.py
scripts/: __init__.py  check_release_version.py  install.ps1  install.sh  package_portable.py  portable-manifest.json  start.cmd  start.sh  update.cmd
(+124 files in other folders)
