[project]
name = "yargi-mcp"
version = "0.2.2"
description = "MCP Server For Turkish Legal Databases"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Said Surucu", email = "saidsrc@gmail.com"}]
keywords = ["mcp", "turkish-law", "legal", "yargitay", "danistay", "bddk", "btk", "kvkk", "turkish", "law", "court", "decisions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/saidsurucu/yargi-mcp", Issues = "https://github.com/saidsurucu/yargi-mcp/issues"}
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "markitdown[pdf]>=0.1.1",
    "pydantic>=2.11.4",
    "aiohttp>=3.11.18",
    "fastmcp>=2.10.5",
    "pypdf>=5.5.0",
    "fastapi>=0.115.14",
    "cryptography>=44.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    # --- LegalAI katmanı (FORK-KAPSAMLI-PLAN.md §9.1) ---
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.30.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "tomlkit>=0.13.2",
    "packaging>=24.0",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
asgi = [
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
production = [
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.0",
]
ocr = [
    "Pillow>=10.0.0",
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.13",
]

[project.scripts]
yargi-mcp = "mcp_server_main:main"
legalai-mcp = "legalai.apps.mcp.server:main"
legalai = "legalai.apps.cli.main:main"
socratlegal-mcp = "legalai.apps.mcp.server:main"
socratlegal = "legalai.apps.cli.main:main"

[tool.setuptools]
py-modules = ["mcp_server_main", "asgi_app"]

[tool.setuptools.packages.find]
include = ["*_mcp_module", "semantic_search", "legalai*"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["legalai/tests"]
